# backtrader

./: pyproject.toml
backtrader/: cerebro.py
