[tool.poetry]
name = "backtrader"
version = "1.9"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
pydocstyle = "^6.3.0"
bandit = "^1.7.5"
pylint = "^2.17.4"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
